# narrarc

./: .gitignore  LICENSE  README.md  package.json  run-local.cmd  run-local.ps1
backend/: CLAUDE.md  README.md  add_json.py  config.yml.example  init.md  main.py  patch_run_eval.py  patch_script.py  profile_pipeline.py  pyproject.toml  tauri_sidecar.py  tauri_sidecar.spec  write_script.py
backend/docs/: ACCURACY_IMPROVEMENT_REPORT.md  ACCURACY_IMPROVEMENT_TASK.md  BASELINE_FINDINGS.md  CLIENT_ADAPTATION_PLAN.md  DEBUG_BASELINE_REPORT.md  FACT_CHECK_DESIGN_DEFECTS.md  NARRATIVE_ARC_QA_GUIDE.md  QUERY_ROUTING_PROBLEM.md  REALTALK_EVAL_GUIDE.md  TASK_7.2_TIME_WINDOW.md  UI_DESIGN_SPEC.md  debug_baseline_retrieval.json  debug_baseline_run.txt
backend/experiments/: baseline_metrics.csv  experiments.jsonl
backend/scripts/: baseline_tracking.py  bench_llm_strategy.py  bench_pipeline_tiers.py  convert_candor.py  convert_kaggle_whatsapp.py  convert_realtalk.py  converter_utils.py  dataset_splitting.py  eval_realtalk_accuracy.py  extract_realtalk_qa.py  generate_arc_cases_from_qa.py  generate_mock_120.py  retrieval_debug.py  run_realtalk_eval.py  run_realtalk_eval_new.py  test_reranker_batch.py
backend/tests/: __init__.py  conftest.py  test_adapters_integration.py  test_build.py  test_cli_json.py  test_convert_candor.py  test_convert_kaggle_whatsapp.py  test_convert_realtalk.py  test_converter_utils.py  test_dataset_integration.py  test_datasource.py  test_db_helpers.py  test_e2e.py  test_fixtures.py  test_generate_arc_cases.py  test_integration.py  test_layer2.py  (+9 more)
(+98 files in other folders)
